# xtc68

./: LICENSE  Makefile  README.md  install.sh  makeall  meson.build  meson_options.txt  move.pl  sdk-install.sh
.github/: stale.yml
as68/: Makefile  Makefile.NT  Makefile.qdos  cbuf.c  cpy.c  cross.c  gen.c  hdr.c  jas.h  lex.c  main.c  mess.c  opcodes.h  ops.c  opt.c  parse.c  parse.h  pass.c  proto.h  scan.c  scan.h  sym.c
c68/: Makefile  Makefile.dist  analyze.c  c68.dsp  c68.dsw  c86.afl  c86.c  c86.dsp  c86.dsw  c86.pic  c86.pr  c86.shd  cglbdec.h  cglbdef.c  chdr.h  check.h  cmain.c  cmains.c  config.bat  config.c68  config.c86  config.chk  config.gen  config.h  config.txt  decl.c  expr.c  expr.h  extern.c  flow68k.c  flowc30.c  gen386.c  gen386.h  gen68k.c  gen68k.h  gen86.c  gen86.h  genarm.c  genarm.h  genc30.c  (+47 more)
cc/: Makefile  cc.c  cc.h  ccutil.c  qcc.c
cpp/: Makefile  Makefile.NT  Makefile.orig  alloca.c  appdir.c  cccp.c  cexp.c  config.h  tm-m68k.h  tm.h
cross/: mkcross.sh  x86_64-w64-macos.txt  x86_64-w64-mingw.txt
ld/: LDLOG  Makefile  Makefile.NT  Makefile.orig  appdir.c  ldold.c  rll.html  rllintro.htm  rllprog.html  rlmprog.html  rlmuser.html
slb/: Makefile  slb.h  slbanal.c  slbdecl.c  slbdis.c  slbmain.c  slbmodul.c  slborder.c  slbproto.h  slbutil.c
src/as68/: cbuf.c  cpy.c  cross.c  gen.c  lex.c  main.c  meson.build  mess.c  ops.c  opt.c  parse.c  pass.c  proto.h  scan.c  scan.h  sym.c
src/c68/: cglbdec.h  cmain.c  cmains.c  config.h  decl.c  expr.c  expr.h  extern.c  flowc30.c  gen386.h  gen68k.c  genarm.h  genffp.c  genieee.c  genutil.c  getsym.c  list.c  meson.build  message.h  optimize.c  outarm_o.c  outc30_r.c  outproto.h  outx86_b.c  outx86_s.c  peep68k.c  peeparm.c  peepc30.c  peepppc.c  proto.h  regarm.c  regppc.c  stmt.c  symbol.c  system.c  version.h
src/cc/: cc.c  ccutil.c  meson.build
src/cpp/: alloca.c  appdir.c  cccp.c  cexp.c  meson.build
src/include/: xtc68.h
src/ld/: ldold.c  meson.build  rll.htm  rlluser.htm
src/slb/: SLBLOG  meson.build  qdos-ar  qdos-ranlib  slb.h  slbanal.c  slbdis.c  slbmain.c  slbmodul.c  slborder.c  slbproto.h  slbutil.c
src/tools/: README.md  meson.build  qcp.c  qls.c
support/: C68 Release 4.24f 31oct98  INCLUDE_ansicondef.h  INCLUDE_assert.h  INCLUDE_basic.h  INCLUDE_channels.h  INCLUDE_ctype.h  INCLUDE_curses.h  INCLUDE_debug.h  INCLUDE_dirent.h  INCLUDE_errno.h  INCLUDE_fcntl.h  INCLUDE_float.h  INCLUDE_grp.h  INCLUDE_iso646.h  INCLUDE_langinfo.h  INCLUDE_libgen.h  INCLUDE_liblist.h  INCLUDE_limits.h  INCLUDE_locale.h  INCLUDE_math.h  INCLUDE_memory.h  INCLUDE_nice.h  INCLUDE_nl_types.h  INCLUDE_pwd.h  INCLUDE_qdos.h  INCLUDE_qptr.h  INCLUDE_rll.h  INCLUDE_setjmp.h  INCLUDE_signal.h  INCLUDE_sms.h  INCLUDE_sroff.h  INCLUDE_std.h  INCLUDE_stdarg.h  INCLUDE_stddef.h  INCLUDE_stdio.h  INCLUDE_stdlib.h  INCLUDE_string.h  INCLUDE_sys_math.h  INCLUDE_sys_qlib.h  INCLUDE_sys_signal.h  (+19 more)
tools/: Makefile  README.md  qcp.c  qls.c
