as68_src = files('cbuf.c', 'cpy.c', 'gen.c', 'hdr.c', 'lex.c',
		 'main.c', 'ops.c', 'opt.c', 'parse.c', 'pass.c',
		 'scan.c', 'sym.c', 'cross.c', 'jas.h', 'opcodes.h',
		 'parse.h', 'proto.h', 'scan.h')



as68_copts= ['-O2', '-Wall', '-Werror', '-pedantic',
	     '-DXTC68', '-I.',
	     '-DLABELDIFF', '-DUSELINE', '-DMINIX', '-DHOST_LITTLE_ENDIAN']

as68_ldopts = []
