

c68_src = files('analyze.c', 'cglbdef.c', 'cmain.c', 'decl.c',
		'expr.c', 'extern.c', 'genstmt.c', 'genutil.c',
		'getsym.c', 'init.c', 'intexpr.c', 'list.c',
		'memmgt.c', 'msgout.c', 'optimize.c', 'outgen.c',
		'stmt.c', 'symbol.c', 'system.c', 'types.c',
		'gen68k.c', 'genffp.c', 'genieee.c', 'peep68k.c',
		'out68k_a.c', 'out68k_q.c', 'reg68k.c', 'cglbdec.h',
		'config.h', 'gen68k.h', 'message.h', 'version.h',
		'chdr.h', 'expr.h', 'outproto.h', 'check.h',
		'proto.h')

c68_copts= ['-O2', '-Wall', '-Werror', '-Wextra', '-pedantic', '-DXTC68', '-I.', '-DNDEBUG']

c68_ldopts = []
